--- a/contract/package.json
+++ b/contract/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.2.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "hardhat-coverage": "^0.9.19"
   }
 }
